feat: update rest api (#15)
* feat: update rest api

* fix: sonar issues
