# src/main/java/org/onecx/tenant/rs/external/v1/controllers/TenantControllerV1.java
@@ -3,7 +3,6 @@ package org.onecx.tenant.rs.external.v1.controllers;
 import static jakarta.transaction.Transactional.TxType.NOT_SUPPORTED;
 import static jakarta.ws.rs.core.Response.Status.BAD_REQUEST;
 import static jakarta.ws.rs.core.Response.Status.NOT_FOUND;
-import static java.lang.String.format;
 
 import java.util.Optional;
 
@@ -16,20 +15,19 @@ import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.Response;
 
 import org.eclipse.microprofile.config.inject.ConfigProperty;
-import org.jboss.resteasy.reactive.RestResponse;
-import org.jboss.resteasy.reactive.server.ServerExceptionMapper;
 import org.jose4j.jws.JsonWebSignature;
 import org.jose4j.jwt.JwtClaims;
+import org.jose4j.jwt.MalformedClaimException;
+import org.jose4j.jwt.consumer.InvalidJwtException;
 import org.jose4j.jwx.JsonWebStructure;
-import org.onecx.tenant.domain.daos.TenantMapDAO;
+import org.jose4j.lang.JoseException;
+import org.onecx.tenant.domain.daos.TenantDAO;
 import org.onecx.tenant.rs.external.v1.mappers.TenantMapperV1;
-import org.tkit.quarkus.jpa.exceptions.DAOException;
 
 import gen.io.github.onecx.tenant.v1.TenantV1Api;
-import gen.io.github.onecx.tenant.v1.model.RestExceptionDTOV1;
-import gen.io.github.onecx.tenant.v1.model.TenantMapDTOV1;
 import io.smallrye.jwt.auth.principal.JWTAuthContextInfo;
 import io.smallrye.jwt.auth.principal.JWTParser;
+import io.smallrye.jwt.auth.principal.ParseException;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
@@ -39,7 +37,7 @@ import lombok.extern.slf4j.Slf4j;
 public class TenantControllerV1 implements TenantV1Api {
 
     @Inject
-    TenantMapDAO dao;
+    TenantDAO dao;
 
     @ConfigProperty(name = "onecx.tenant.token.claim.org-id")
     String orgClaim;
@@ -47,7 +45,7 @@ public class TenantControllerV1 implements TenantV1Api {
     @ConfigProperty(name = "onecx.tenant.token.verified")
     boolean verified;
 
-    @ConfigProperty(name = "onecx.tenant.token.issuer.public-key-location.suffix", defaultValue = "/protocol/openid-connect/certs")
+    @ConfigProperty(name = "onecx.tenant.token.issuer.public-key-location.suffix")
     String issuerPublicKeyLocationSuffix;
 
     @ConfigProperty(name = "onecx.tenant.token.issuer.public-key-location.enabled")
@@ -55,6 +53,12 @@ public class TenantControllerV1 implements TenantV1Api {
 
     @ConfigProperty(name = "onecx.tenant.header.token")
     String headerParam;
+
+    @ConfigProperty(name = "onecx.tenant.default.enabled")
+    boolean defaultTenantEnabled;
+
+    @ConfigProperty(name = "onecx.tenant.default.tenant-id")
+    String defaultTenantValue;
 
     @Context
     HttpHeaders headers;
@@ -74,64 +78,84 @@ public class TenantControllerV1 implements TenantV1Api {
         // read token from header
         var apmPrincipalToken = headers.getHeaderString(headerParam);
         if (apmPrincipalToken == null || apmPrincipalToken.isBlank()) {
-            return Response.status(BAD_REQUEST).entity("Missing APM principal token: " + headerParam).build();
+            log.error("Missing APM principal token: " + headerParam);
+            return Response.status(BAD_REQUEST)
+                    .entity(mapper.exception(ErrorKeys.ERROR_MISSING_APM_PRINCIPAL_TOKEN,
+                            "Missing APM principal token: " + headerParam))
+                    .build();
         }
 
-        // parse and verify? token
-        Optional<String> organizationClaim;
+        // read organization from token
+        String organizationId;
         try {
-            if (verified) {
-                var info = authContextInfo;
-
-                // get public key location from issuer URL
-                if (issuerEnabled) {
-                    var jws = (JsonWebSignature) JsonWebStructure.fromCompactSerialization(apmPrincipalToken);
-                    var jwtClaims = JwtClaims.parse(jws.getUnverifiedPayload());
-                    var publicKeyLocation = jwtClaims.getIssuer() + issuerPublicKeyLocationSuffix;
-                    info = new JWTAuthContextInfo(authContextInfo);
-                    info.setPublicKeyLocation(publicKeyLocation);
-                }
-
-                var token = parser.parse(apmPrincipalToken, info);
-                organizationClaim = token.claim(orgClaim);
-            } else {
-                var jws = (JsonWebSignature) JsonWebStructure.fromCompactSerialization(apmPrincipalToken);
-                var jwtClaims = JwtClaims.parse(jws.getUnverifiedPayload());
-                organizationClaim = Optional.of(jwtClaims.getClaimValueAsString(orgClaim));
-            }
+            organizationId = getOrganization(apmPrincipalToken);
         } catch (Exception e) {
             log.error("Failed to verify a token. Error: {}", e.getMessage());
-            return Response.status(BAD_REQUEST).entity(e.getMessage()).build();
+            return Response.status(BAD_REQUEST)
+                    .entity(mapper.exception(ErrorKeys.ERROR_VERIFY_APM_TOKEN,
+                            "Failed to verify a token. Error: " + e.getMessage()))
+                    .build();
         }
 
-        // read claim
-        if (organizationClaim.isEmpty()) {
+        // validate organization
+        if (organizationId == null) {
+            if (defaultTenantEnabled) {
+                return Response.ok(mapper.create(defaultTenantValue)).build();
+            }
             log.error("Could not find organization field '{}' in the ID token", orgClaim);
-            return Response.status(BAD_REQUEST).entity(format("Could not read org ID of field: %s ", orgClaim)).build();
+            return Response.status(BAD_REQUEST)
+                    .entity(mapper.exception(ErrorKeys.ERROR_NO_ORGANIZATION_ID_IN_TOKEN,
+                            "Could not find organization field '" + orgClaim + "' in the ID token"))
+                    .build();
         }
-        var organizationId = organizationClaim.get();
 
         // find tenant ID for the organizationId
         var tenantId = dao.findTenantIdByOrgId(organizationId);
-        if (tenantId.isEmpty()) {
-            return Response.status(NOT_FOUND).entity(format("Did not find tenant map for org ID: %s", organizationId)).build();
+        if (tenantId.isPresent()) {
+            return Response.ok(mapper.create(tenantId.get())).build();
         }
 
-        var tenantMapDTO = new TenantMapDTOV1();
-        tenantMapDTO.setTenantId(tenantId.get());
+        // check if default tenant is enabled
+        if (defaultTenantEnabled) {
+            return Response.ok(mapper.create(defaultTenantValue)).build();
+        }
 
-        return Response.ok(tenantMapDTO).build();
+        return Response.status(NOT_FOUND).build();
     }
 
-    @ServerExceptionMapper
-    public RestResponse<RestExceptionDTOV1> exception(Exception ex) {
-        log.error("Process external rest-controller v1 error:{}", ex.getMessage());
-        if (ex instanceof DAOException de) {
-            return RestResponse.status(Response.Status.BAD_REQUEST,
-                    mapper.exception(de.getMessageKey().name(), ex.getMessage(), de.parameters));
-        }
-        return RestResponse.status(Response.Status.INTERNAL_SERVER_ERROR,
-                mapper.exception("UNDEFINED_ERROR_CODE", ex.getMessage()));
+    private String getOrganization(String apmPrincipalToken)
+            throws JoseException, InvalidJwtException, MalformedClaimException, ParseException {
+        Optional<String> organizationClaim;
 
+        if (verified) {
+            var info = authContextInfo;
+
+            // get public key location from issuer URL
+            if (issuerEnabled) {
+                var jws = (JsonWebSignature) JsonWebStructure.fromCompactSerialization(apmPrincipalToken);
+                var jwtClaims = JwtClaims.parse(jws.getUnverifiedPayload());
+                var publicKeyLocation = jwtClaims.getIssuer() + issuerPublicKeyLocationSuffix;
+                info = new JWTAuthContextInfo(authContextInfo);
+                info.setPublicKeyLocation(publicKeyLocation);
+            }
+
+            var token = parser.parse(apmPrincipalToken, info);
+            organizationClaim = token.claim(orgClaim);
+        } else {
+            var jws = (JsonWebSignature) JsonWebStructure.fromCompactSerialization(apmPrincipalToken);
+            var jwtClaims = JwtClaims.parse(jws.getUnverifiedPayload());
+            organizationClaim = Optional.of(jwtClaims.getClaimValueAsString(orgClaim));
+        }
+
+        return organizationClaim.orElse(null);
+
+    }
+
+    public enum ErrorKeys {
+
+        ERROR_NO_ORGANIZATION_ID_IN_TOKEN,
+
+        ERROR_MISSING_APM_PRINCIPAL_TOKEN,
+        ERROR_VERIFY_APM_TOKEN;
     }
 }
